# oxford_pet_lab

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  test.ipynb  test.py
config/: model_config.yaml
notebooks/: 01_dataset_exploration.ipynb  02_object_detection.ipynb
results/plots/detection/: dummy.py
results/plots/detections/: dummy.py
results/plots/segmentation/: dummy.py
results/reports/: train_stats.json
src/: __init__.py  main.py
src/config/: __init__.py  config.py  model_configs.py
src/data/: __init__.py  augmentation.py  dataset_loader.py  preprocessing.py  preprocessor.py
src/evaluation/: __init__.py  evaluator.py  metrics_calculator.py  visualization.py
src/metrics/: sota_metrics.py
src/models/: __init__.py  base_model.py  detection_model.py  multitask_model.py  segmentation_model.py
src/models/detecttion/: detection_model.py  module.py
src/models/segmentation/: __init__.py  module.py  segmentation_model.py
src/training/: __init__.py  base.py  callbacks.py  losses.py  metrics.py  optimizers.py  trainer.py
src/utils/: __init__.py  bbox_utils.py  file_utils.py  io.py  mask_utils.py  plot_utils.py  result_manager.py
src/visualization/: __init__.py  data_visualizer.py  results_visualizer.py
tests/: __init__.py  test_data_processing.py
