[project]
name = "oxford-pet-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.16"
dependencies = [
    "jupyter>=1.1.1",
    "opencv-python>=4.11.0.86",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "tensorboard>=2.19.0",
    "tensorflow-addons>=0.23.0",
    "tensorflow[and-cuda]>=2.19.0",
    "tensorflow-datasets>=4.9.9",
]

[tool.poetry]
packages = [{include = "src"}]
