[project]
name = "oxford-pet-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "opencv-python>=4.11.0.86",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "matplotlib>=3.10.3",
    "mlxtend>=0.23.4",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
a2a = { path = "./src/", editable = true }
